# hmw20

./: .travis.yml  ppl.json  pyproject.toml
workua/: items.py  middlewares.py  settings.py
workua/spiders/: workua.py
